BUG: fixed blurred shapes

--- a/packages/brushbox/src/styles/brushbox.css
+++ b/packages/brushbox/src/styles/brushbox.css
@@ -18,6 +18,11 @@
   height: 100%;
 }
 
+.brushbox-canvas {
+  width: 100%;
+  height: 100%;
+}
+
 .brushbox-toolbar {
   display: flex;
   align-items: center;
@@ -25,6 +30,7 @@
   background-color: white;
   box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  border: 1px solid black;
   position: absolute;
   top: 10px;
   left: 50%;
